--- a/username.html
+++ b/username.html
@@ -34,6 +34,8 @@ if (!username) {
 
 if (!username) {
   alert("Falta username en la URL");
+} else {
+  username = username.toLowerCase(); // ⬅ forzar minúsculas
 }
 
 let selectedDate = new Date();
