--- a/panel.html
+++ b/panel.html
@@ -1,147 +1,159 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Panel de Configuración</title>
-  <script>
-    const API_URL = "https://script.google.com/macros/s/AKfycbxNcjfnN9gkEi07jw1jyU-X9szmmpAerEfdn6LmcCvP15R00BYvJXy8Qca_9kAGl7Sq/exec"; // <--- pegá aquí tu Web App desplegado
-    let userId = localStorage.getItem("userId");
-    let username = localStorage.getItem("username");
-    let profesionales = [];
+<meta charset="UTF-8">
+<title>Panel de Configuración</title>
+<style>
+  body { font-family: Arial, sans-serif; padding:20px; }
+  .profesional { border:1px solid #ccc; padding:10px; margin:10px 0; }
+  h2 { margin-top:20px; }
+  label { margin-right:10px; }
+  .hora-checkbox { display:inline-block; margin:2px; }
+</style>
+<script>
+const API_URL = "https://script.google.com/macros/s/AKfycbxNcjfnN9gkEi07jw1jyU-X9szmmpAerEfdn6LmcCvP15R00BYvJXy8Qca_9kAGl7Sq/exec";
+let userId = localStorage.getItem("userId");
+let username = localStorage.getItem("username");
+let profesionales = [];
+const userTimeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
 
-    async function init() {
-      if (!userId || !username) {
-        alert("Debes iniciar sesión primero.");
-        window.location.href = "/login.html";
-        return;
+// ---------------- UTIL ----------------
+function horaADecimal(hhmm) {
+  const [h, m] = hhmm.split(":").map(Number);
+  return h + m/60;
+}
+
+// Convierte hora local a UTC decimal
+function horaLocalADecimalUTC(hhmm, fechaStr="2025-01-01") {
+  const [h, m] = hhmm.split(":").map(Number);
+  const localDate = new Date(`${fechaStr}T${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:00`);
+  const utcH = localDate.getUTCHours();
+  const utcM = localDate.getUTCMinutes();
+  return utcH + utcM/60;
+}
+
+// ---------------- INIT ----------------
+async function init() {
+  if (!userId || !username) {
+    alert("Debes iniciar sesión primero.");
+    window.location.href = "/login.html";
+    return;
+  }
+  document.getElementById("username").innerText = username;
+  await cargarProfesionales();
+}
+
+// ---------------- PROFESIONALES ----------------
+async function cargarProfesionales() {
+  const res = await fetch(`${API_URL}?username=${username}`);
+  const data = await res.json();
+  if (data.status === "ok") {
+    profesionales = data.profesionales;
+    renderProfesionales();
+  }
+}
+
+function renderProfesionales() {
+  const cont = document.getElementById("profesionales");
+  cont.innerHTML = "";
+  profesionales.forEach(prof => {
+    const div = document.createElement("div");
+    div.className = "profesional";
+    div.innerHTML = `
+      <h3>${prof.nombre}</h3>
+      <button onclick="abrirTurnos('${prof.profesionalId}','${prof.nombre}')">Configurar Turnos</button>
+      <button onclick="abrirExcepciones('${prof.profesionalId}','${prof.nombre}')">Excepciones</button>
+    `;
+    cont.appendChild(div);
+  });
+}
+
+async function agregarProfesional() {
+  const nombre = prompt("Nombre del profesional:");
+  if (!nombre) return;
+  const formData = new FormData();
+  formData.append("action","addProfessional");
+  formData.append("userId", userId);
+  formData.append("nombre", nombre);
+  const res = await fetch(API_URL, {method:"POST", body:formData});
+  const data = await res.json();
+  if (data.status==="ok") {
+    profesionales.push({profesionalId:data.profesionalId, nombre:data.nombre});
+    renderProfesionales();
+  }
+}
+
+// ---------------- TURNOS STANDARD ----------------
+function abrirTurnos(profId, nombre) {
+  const dias = ["Lunes","Martes","Miércoles","Jueves","Viernes","Sábado","Domingo"];
+  let html = `<h2>Turnos Standard de ${nombre}</h2>`;
+  dias.forEach(d=>{
+    html += `<h4>${d}</h4><div>`;
+    for (let h=0; h<24; h++) {
+      for (let m=0; m<60; m+=15) {
+        const hhmm = `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}`;
+        const dec = horaADecimal(hhmm);
+        const id = `${profId}_${d}_${dec}`;
+        html += `<label class="hora-checkbox"><input type="checkbox" id="${id}" data-dia="${d}" data-hora="${dec}" data-hhmm="${hhmm}"> ${hhmm}</label> `;
       }
-
-      document.getElementById("username").innerText = username;
-      await cargarProfesionales();
     }
+    html += `</div>`;
+  });
+  html += `<br><button onclick="guardarTurnos('${profId}')">Guardar</button>`;
+  document.getElementById("config").innerHTML = html;
+}
 
-    async function cargarProfesionales() {
-      const res = await fetch(`${API_URL}?username=${username}`);
-      const data = await res.json();
-
-      if (data.status === "ok") {
-        profesionales = data.profesionales;
-        renderProfesionales();
-      }
+async function guardarTurnos(profId) {
+  const checkboxes = document.querySelectorAll(`#config input[type=checkbox]`);
+  const turnos = [];
+  checkboxes.forEach(ch=>{
+    if (ch.checked) {
+      // Convertimos cada hora local a UTC decimal
+      const horaUTC = horaLocalADecimalUTC(ch.dataset.hhmm);
+      turnos.push({dia: ch.dataset.dia, hora: horaUTC, visible:1});
     }
+  });
+  const formData = new FormData();
+  formData.append("action","saveTurnosStandard");
+  formData.append("profesionalId", profId);
+  formData.append("turnos", JSON.stringify(turnos));
+  const res = await fetch(API_URL, {method:"POST", body:formData});
+  const data = await res.json();
+  alert("Turnos guardados correctamente.");
+}
 
-    function renderProfesionales() {
-      const cont = document.getElementById("profesionales");
-      cont.innerHTML = "";
+// ---------------- EXCEPCIONES ----------------
+function abrirExcepciones(profId, nombre) {
+  document.getElementById("config").innerHTML = `
+    <h2>Excepciones de ${nombre}</h2>
+    <label>Fecha: <input type="date" id="exc_fecha"></label><br>
+    <label>Hora: <input type="time" id="exc_hora" step="900"></label><br>
+    <select id="exc_estado">
+      <option value="bloqueado">Bloquear</option>
+      <option value="habilitado">Habilitar</option>
+    </select><br><br>
+    <button onclick="guardarExcepcion('${profId}')">Guardar Excepción</button>
+  `;
+}
 
-      profesionales.forEach(prof => {
-        const div = document.createElement("div");
-        div.className = "profesional";
-        div.innerHTML = `
-          <h3>${prof.nombre}</h3>
-          <button onclick="abrirTurnos('${prof.profesionalId}','${prof.nombre}')">Configurar Turnos</button>
-          <button onclick="abrirExcepciones('${prof.profesionalId}','${prof.nombre}')">Excepciones</button>
-        `;
-        cont.appendChild(div);
-      });
-    }
+async function guardarExcepcion(profId) {
+  const fecha = document.getElementById("exc_fecha").value;
+  const hhmm = document.getElementById("exc_hora").value;
+  const estado = document.getElementById("exc_estado").value;
+  // Convertimos hora local a UTC decimal usando la fecha real
+  const horaDecimal = horaLocalADecimalUTC(hhmm, fecha);
+  const formData = new FormData();
+  formData.append("action","saveExcepcion");
+  formData.append("profesionalId", profId);
+  formData.append("fecha", fecha);
+  formData.append("hora", horaDecimal);
+  formData.append("estado", estado);
+  const res = await fetch(API_URL, {method:"POST", body:formData});
+  const data = await res.json();
+  alert("Excepción guardada correctamente.");
+}
 
-    async function agregarProfesional() {
-      const nombre = prompt("Nombre del profesional:");
-      if (!nombre) return;
-
-      const formData = new FormData();
-      formData.append("action","addProfessional");
-      formData.append("userId", userId);
-      formData.append("nombre", nombre);
-
-      const res = await fetch(API_URL, {method:"POST", body:formData});
-      const data = await res.json();
-
-      if (data.status === "ok") {
-        profesionales.push({profesionalId:data.profesionalId, nombre:data.nombre});
-        renderProfesionales();
-      }
-    }
-
-    // ----- Configuración de turnos standard -----
-    function abrirTurnos(profId, nombre) {
-      const dias = ["Lunes","Martes","Miércoles","Jueves","Viernes","Sábado","Domingo"];
-      let html = `<h2>Turnos Standard de ${nombre}</h2>`;
-
-      dias.forEach(d=>{
-        html += `<h4>${d}</h4><div>`;
-        for (let h=0; h<24; h++) {
-          for (let m=0; m<60; m+=15) {
-            const hora = `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}`;
-            const id = `${profId}_${d}_${hora}`;
-            html += `<label><input type="checkbox" id="${id}" data-dia="${d}" data-hora="${hora}"> ${hora}</label> `;
-          }
-        }
-        html += `</div>`;
-      });
-
-      html += `<br><button onclick="guardarTurnos('${profId}')">Guardar</button>`;
-
-      document.getElementById("config").innerHTML = html;
-    }
-
-    async function guardarTurnos(profId) {
-      const checkboxes = document.querySelectorAll(`#config input[type=checkbox]`);
-      const turnos = [];
-      checkboxes.forEach(ch=>{
-        if (ch.checked) {
-          turnos.push({dia: ch.dataset.dia, hora: ch.dataset.hora, visible:1});
-        }
-      });
-
-      const formData = new FormData();
-      formData.append("action","saveTurnosStandard");
-      formData.append("profesionalId", profId);
-      formData.append("turnos", JSON.stringify(turnos));
-
-      const res = await fetch(API_URL, {method:"POST", body:formData});
-      const data = await res.json();
-      alert("Turnos guardados correctamente.");
-    }
-
-    // ----- Excepciones -----
-    function abrirExcepciones(profId, nombre) {
-      document.getElementById("config").innerHTML = `
-        <h2>Excepciones de ${nombre}</h2>
-        <label>Fecha: <input type="date" id="exc_fecha"></label><br>
-        <label>Hora: <input type="time" id="exc_hora" step="900"></label><br>
-        <select id="exc_estado">
-          <option value="bloqueado">Bloquear</option>
-          <option value="habilitado">Habilitar</option>
-        </select><br><br>
-        <button onclick="guardarExcepcion('${profId}')">Guardar Excepción</button>
-      `;
-    }
-
-    async function guardarExcepcion(profId) {
-      const fecha = document.getElementById("exc_fecha").value;
-      const hora = document.getElementById("exc_hora").value;
-      const estado = document.getElementById("exc_estado").value;
-
-      const formData = new FormData();
-      formData.append("action","saveExcepcion");
-      formData.append("profesionalId", profId);
-      formData.append("fecha", fecha);
-      formData.append("hora", hora);
-      formData.append("estado", estado);
-
-      const res = await fetch(API_URL, {method:"POST", body:formData});
-      const data = await res.json();
-      alert("Excepción guardada correctamente.");
-    }
-  </script>
-  <style>
-    body { font-family: Arial, sans-serif; padding:20px; }
-    .profesional { border:1px solid #ccc; padding:10px; margin:10px 0; }
-    h2 { margin-top:20px; }
-    label { margin-right:10px; }
-  </style>
+</script>
 </head>
 <body onload="init()">
   <h1>Panel de Configuración</h1>
