--- a/panel.html
+++ b/panel.html
@@ -15,22 +15,6 @@ const API_URL = "https://script.google.com/macros/s/AKfycbzpZbolbStinswesYusO4rv
 let userId = localStorage.getItem("userId");
 let username = localStorage.getItem("username");
 let profesionales = [];
-const userTimeZone = Intl.DateTimeFormat().resolvedOptions().timeZone;
-
-// ---------------- UTIL ----------------
-function horaADecimal(hhmm) {
-  const [h, m] = hhmm.split(":").map(Number);
-  return h + m/60;
-}
-
-// Convierte hora local a UTC decimal
-function horaLocalADecimalUTC(hhmm, fechaStr="2025-01-01") {
-  const [h, m] = hhmm.split(":").map(Number);
-  const localDate = new Date(`${fechaStr}T${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:00`);
-  const utcH = localDate.getUTCHours();
-  const utcM = localDate.getUTCMinutes();
-  return utcH + utcM/60;
-}
 
 // ---------------- INIT ----------------
 async function init() {
@@ -92,9 +76,8 @@ function abrirTurnos(profId, nombre) {
     for (let h=0; h<24; h++) {
       for (let m=0; m<60; m+=15) {
         const hhmm = `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}`;
-        const dec = horaADecimal(hhmm);
-        const id = `${profId}_${d}_${dec}`;
-        html += `<label class="hora-checkbox"><input type="checkbox" id="${id}" data-dia="${d}" data-hora="${dec}" data-hhmm="${hhmm}"> ${hhmm}</label> `;
+        const id = `${profId}_${d}_${hhmm}`;
+        html += `<label class="hora-checkbox"><input type="checkbox" id="${id}" data-dia="${d}" data-hora="${hhmm}" data-hhmm="${hhmm}"> ${hhmm}</label> `;
       }
     }
     html += `</div>`;
@@ -108,9 +91,7 @@ async function guardarTurnos(profId) {
   const turnos = [];
   checkboxes.forEach(ch=>{
     if (ch.checked) {
-      // Convertimos cada hora local a UTC decimal
-      const horaUTC = horaLocalADecimalUTC(ch.dataset.hhmm);
-      turnos.push({dia: ch.dataset.dia, hora: horaUTC, visible:1});
+      turnos.push({dia: ch.dataset.dia, hora: ch.dataset.hhmm, visible:1});
     }
   });
   const formData = new FormData();
@@ -140,13 +121,12 @@ async function guardarExcepcion(profId) {
   const fecha = document.getElementById("exc_fecha").value;
   const hhmm = document.getElementById("exc_hora").value;
   const estado = document.getElementById("exc_estado").value;
-  // Convertimos hora local a UTC decimal usando la fecha real
-  const horaDecimal = horaLocalADecimalUTC(hhmm, fecha);
+
   const formData = new FormData();
   formData.append("action","saveExcepcion");
   formData.append("profesionalId", profId);
   formData.append("fecha", fecha);
-  formData.append("hora", horaDecimal);
+  formData.append("hora", hhmm);
   formData.append("estado", estado);
   const res = await fetch(API_URL, {method:"POST", body:formData});
   const data = await res.json();
