--- a/index.html
+++ b/index.html
@@ -3,49 +3,78 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página Principal</title>
-  
-  <!-- Montserrat desde Google Fonts -->
+  <title>TurnoX</title>
+
+  <!-- Google Fonts: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
-  
+
   <style>
-    /* Estilos generales */
-    body, html {
+    /* Reset y estilos generales */
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
+    }
+
+    html, body {
       height: 100%;
       font-family: 'Montserrat', sans-serif;
       background-color: #533482;
       display: flex;
       justify-content: center;
       align-items: center;
-      flex-direction: column;
+    }
+
+    /* Contenedor principal */
+    .container {
+      text-align: center;
+      color: #fff;
+    }
+
+    .logo {
+      font-size: 2.5rem;
+      font-weight: 700;
+      margin-bottom: 5px;
+    }
+
+    .subtitle {
+      font-size: 0.9rem;
+      font-weight: 400;
+      margin-bottom: 40px;
+      color: #ffffffcc;
     }
 
     /* Botones */
     .btn {
-      padding: 15px 30px;
-      margin: 10px;
-      font-size: 1.1rem;
+      display: block;
+      width: 250px;
+      padding: 15px 0;
+      margin: 10px auto;
+      font-size: 1rem;
       font-weight: 600;
-      color: #fff;
-      background-color: #7f5cc7;
+      color: #533482;
+      background-color: #fff;
       border: none;
       border-radius: 8px;
       cursor: pointer;
       text-decoration: none;
-      transition: background-color 0.3s;
+      transition: background-color 0.3s, transform 0.2s;
     }
 
     .btn:hover {
-      background-color: #9a6fd4;
+      background-color: #f2f2f2;
+      transform: translateY(-2px);
     }
+
   </style>
 </head>
 <body>
-  
-  <a href="/login" class="btn">Login</a>
-  <a href="/register" class="btn">Register</a>
+  <div class="container">
+    <div class="logo">TurnoX</div>
+    <div class="subtitle">www.turnox.pro</div>
 
+    <a href="/register" class="btn">Crear Cuenta</a>
+    <a href="/login" class="btn">Ya tengo una cuenta</a>
+  </div>
 </body>
 </html>
