--- a/login.html
+++ b/login.html
@@ -3,14 +3,127 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
-  <p><a href="#" onclick="mostrarRecuperar()">¿Olvidaste tu contraseña?</a></p>
+  <style>
+    /* ======== Reset ======== */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: Arial, Helvetica, sans-serif;
+    }
 
-<div id="recuperarDiv" style="display:none;">
-  <h3>Recuperar Contraseña</h3>
-  <input type="email" id="recuperarEmail" placeholder="Tu email">
-  <button onclick="recuperarClave()">Enviar</button>
-</div>
+    body {
+      background-color: #533482;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
+    .login-container {
+      text-align: center;
+      color: white;
+      width: 100%;
+      max-width: 320px;
+    }
+
+    .login-container h1 {
+      font-size: 32px;
+      font-weight: 700;
+    }
+
+    .login-container p {
+      font-size: 12px;
+      margin-bottom: 40px;
+    }
+
+    .login-container label {
+      display: block;
+      margin-bottom: 8px;
+      font-size: 14px;
+    }
+
+    .login-container input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
+      border: none;
+      border-radius: 6px;
+      outline: none;
+      font-size: 14px;
+    }
+
+    .login-container button {
+      width: 100%;
+      padding: 12px;
+      background: white;
+      color: #542f82;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .login-container button:hover {
+      background: #ddd;
+    }
+
+    .recuperar {
+      margin-top: 15px;
+    }
+
+    .recuperar a {
+      color: white;
+      font-size: 14px;
+      text-decoration: none;
+    }
+
+    .recuperar a:hover {
+      text-decoration: underline;
+    }
+
+    /* Div oculto recuperar clave */
+    #recuperarDiv {
+      margin-top: 20px;
+      background: rgba(255,255,255,0.1);
+      padding: 15px;
+      border-radius: 8px;
+    }
+
+    #recuperarDiv input {
+      background: white;
+      color: black;
+      margin-bottom: 10px;
+    }
+
+    #recuperarDiv button {
+      background: white;
+      color: #533482;
+    }
+  </style>
+</head>
+<body>
+  <div class="login-container">
+    <h1>TurnoX</h1>
+    <p>www.turnox.pro</p>
+
+    <label for="email">Ingresa a tu cuenta:</label>
+    <input type="email" id="email" placeholder="Email">
+    <input type="password" id="password" placeholder="Contraseña">
+    <button onclick="login()">Ingresar</button>
+
+    <div class="recuperar">
+      <a href="#" onclick="mostrarRecuperar()">¿Olvidaste tu contraseña?</a>
+    </div>
+
+    <div id="recuperarDiv" style="display:none;">
+      <h3>Recuperar Contraseña</h3>
+      <input type="email" id="recuperarEmail" placeholder="Tu email">
+      <button onclick="recuperarClave()">Enviar</button>
+    </div>
+  </div>
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbwYyZxhhH5LV0k23fONwZ7INeWz1is4TiqcxHhjz2T3Rwbho_IUwRoumqJbvA8iPXbM/exec";
 
