--- a/login.html
+++ b/login.html
@@ -3,17 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <title>Login</title>
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     /* ======== Reset ======== */
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
-      font-family: Arial, Helvetica, sans-serif;
+      font-family: 'Montserrat', sans-serif;
     }
 
     body {
-      background-color: #533482;
+      background-color: #533482; /* violeta */
       height: 100vh;
       display: flex;
       justify-content: center;
@@ -57,7 +59,7 @@
       width: 100%;
       padding: 12px;
       background: white;
-      color: #542f82;
+      color: #533482;
       border: none;
       border-radius: 6px;
       font-size: 16px;
@@ -124,6 +126,7 @@
       <button onclick="recuperarClave()">Enviar</button>
     </div>
   </div>
+
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbwYyZxhhH5LV0k23fONwZ7INeWz1is4TiqcxHhjz2T3Rwbho_IUwRoumqJbvA8iPXbM/exec";
 
@@ -181,10 +184,6 @@ async function recuperarClave(){
 
   </script>
 </head>
-<body>
-  <h1>Login</h1>
-  <input type="email" id="email" placeholder="Email"><br>
-  <input type="password" id="password" placeholder="Contraseña"><br>
-  <button onclick="login()">Ingresar</button>
+
 </body>
 </html>
