--- a/register.html
+++ b/register.html
@@ -4,58 +4,96 @@
   <meta charset="UTF-8">
   <title>Registro de Usuario</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Montserrat', sans-serif;
+    }
+
     body {
-      font-family: Arial, sans-serif;
-      background: #f5f5f5;
+      background-color: #533482; /* Violeta */
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
     }
-    form {
-      background: white;
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      max-width: 400px;
-      width: 100%;
-    }
-    h2 { text-align: center; color: #0077cc; }
-    input {
-      width: 100%;
-      padding: 0.8rem;
-      margin: 0.5rem 0;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      text-transform: lowercase; /* ⬅ para que se vea en minúsculas mientras escriben */
-    }
-    button {
-      width: 100%;
-      padding: 0.8rem;
-      background: #0077cc;
+
+    .register-container {
+      text-align: center;
       color: white;
+      width: 100%;
+      max-width: 320px;
+    }
+
+    .register-container h1 {
+      font-size: 32px;
+      font-weight: 700;
+    }
+
+    .register-container p {
+      font-size: 12px;
+      margin-bottom: 40px;
+    }
+
+    .register-container label {
+      display: block;
+      margin-bottom: 8px;
+      font-size: 14px;
+    }
+
+    .register-container input {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 15px;
       border: none;
       border-radius: 6px;
-      cursor: pointer;
-    }
-    button:hover { background: #005fa3; }
-    #msg {
-      margin-top: 1rem;
+      outline: none;
+      font-size: 14px;
       text-align: center;
+    }
+
+    .register-container button {
+      width: 100%;
+      padding: 12px;
+      background: white;
+      color: #533482;
+      border: none;
+      border-radius: 6px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .register-container button:hover {
+      background: #ddd;
+    }
+
+    #msg {
+      margin-top: 15px;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
-  <form id="registerForm">
-    <h2>Crear Cuenta</h2>
-    <input type="email" id="email" placeholder="Tu correo" required>
-    <input type="text" id="username" placeholder="Elige un usuario (ej: peluqueria)" required>
-    <input type="password" id="password" placeholder="Contraseña" required>
-    <button type="submit">Registrarme</button>
-    <div id="msg"></div>
-  </form>
+  <div class="register-container">
+    <h1>TurnoX</h1>
+    <p>www.turnox.pro</p>
 
+    <label for="email">Crea tu cuenta:</label>
+    <input type="email" id="email" placeholder="Email" required>
+    <input type="password" id="password" placeholder="Contraseña" required>
+    <p>www.turnox.pro/</p>
+    <input type="text" id="username" placeholder="nombre de tu negocio" required>
+    <button type="button" onclick="register()">Registrarme</button>
+    <div id="msg"></div>
+  </div>
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbwYyZxhhH5LV0k23fONwZ7INeWz1is4TiqcxHhjz2T3Rwbho_IUwRoumqJbvA8iPXbM/exec";
 
