--- a/register.html
+++ b/register.html
@@ -82,18 +82,17 @@
   </style>
 </head>
 <body>
-  <div class="register-container">
-    <h1>TurnoX</h1>
-    <p>www.turnox.pro</p>
-
-    <label for="email">Crea tu cuenta:</label>
-    <input type="email" id="email" placeholder="Email" required>
-    <input type="password" id="password" placeholder="Contraseña" required>
-    <p>www.turnox.pro/</p>
-    <input type="text" id="username" placeholder="nombre de tu negocio" required>
-    <button type="button" onclick="register()">Registrarme</button>
-    <div id="msg"></div>
-  </div>
+  <body> 
+    <form id="registerForm"> 
+      <h2>Crear Cuenta</h2> 
+      <input type="email" id="email" placeholder="Tu correo" required> 
+      <input type="text" id="username" placeholder="Elige un usuario (ej: peluqueria)" required> 
+      <input type="password" id="password" placeholder="Contraseña" required> 
+      <button type="submit">Registrarme</button> 
+      <div id="msg"></div> 
+    </form>
+    
+  
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbwYyZxhhH5LV0k23fONwZ7INeWz1is4TiqcxHhjz2T3Rwbho_IUwRoumqJbvA8iPXbM/exec";
 
