--- a/register.html
+++ b/register.html
@@ -17,82 +17,94 @@
     }
 
     body {
-      background-color: #533482; /* Violeta */
+      background-color: #533482; /* Fondo violeta */
       height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
     }
 
-    .register-container {
+    .container {
       text-align: center;
       color: white;
       width: 100%;
-      max-width: 320px;
+      max-width: 350px;
     }
 
-    .register-container h1 {
-      font-size: 32px;
+    .logo {
+      font-size: 2rem;
       font-weight: 700;
     }
 
-    .register-container p {
-      font-size: 12px;
-      margin-bottom: 40px;
+    .logo span {
+      font-weight: 400;
     }
 
-    .register-container label {
+    .web {
+      font-size: 0.9rem;
+      margin-bottom: 2rem;
       display: block;
-      margin-bottom: 8px;
-      font-size: 14px;
     }
 
-    .register-container input {
+    form {
+      background: transparent;
+      padding: 1rem;
+      border-radius: 12px;
+    }
+
+    h2 {
+      margin-bottom: 1rem;
+      font-weight: 600;
+    }
+
+    input {
       width: 100%;
-      padding: 12px;
-      margin-bottom: 15px;
+      padding: 0.8rem;
+      margin: 0.5rem 0;
       border: none;
-      border-radius: 6px;
+      border-radius: 8px;
       outline: none;
-      font-size: 14px;
-      text-align: center;
+      font-size: 1rem;
     }
 
-    .register-container button {
+    button {
       width: 100%;
-      padding: 12px;
+      padding: 0.8rem;
       background: white;
       color: #533482;
       border: none;
-      border-radius: 6px;
-      font-size: 16px;
-      font-weight: bold;
+      border-radius: 8px;
+      font-weight: 600;
       cursor: pointer;
-      transition: 0.3s;
+      margin-top: 1rem;
     }
 
-    .register-container button:hover {
-      background: #ddd;
+    button:hover {
+      background: #e5e5e5;
     }
 
     #msg {
-      margin-top: 15px;
-      font-size: 14px;
+      margin-top: 1rem;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
-  <body> 
+  <div class="container">
+    <!-- Logo y web -->
+    <div class="logo">TurnoX</div>
+    <span class="web">www.turnox.pro</span>
+
+    <!-- Form -->
     <form id="registerForm"> 
-      <h2>Crear Cuenta</h2> 
-      <input type="email" id="email" placeholder="Tu correo" required> 
-      <input type="text" id="username" placeholder="Elige un usuario (ej: peluqueria)" required> 
+      <h2>Crear tu cuenta:</h2> 
+      <input type="email" id="email" placeholder="Email" required> 
       <input type="password" id="password" placeholder="Contraseña" required> 
+      <span class="web">www.turnox.pro/</span>
+      <input type="text" id="username" placeholder="nombre de tu negocio" required> 
       <button type="submit">Registrarme</button> 
       <div id="msg"></div> 
     </form>
-    
-  
   <script>
     const API_URL = "https://script.google.com/macros/s/AKfycbwYyZxhhH5LV0k23fONwZ7INeWz1is4TiqcxHhjz2T3Rwbho_IUwRoumqJbvA8iPXbM/exec";
 
