--- a/register.html
+++ b/register.html
@@ -41,8 +41,8 @@
     }
 
     .web {
-      font-size: 0.9rem;
-      margin-bottom: 2rem;
+      font-size: 12px;
+      margin-bottom: 5px;
       display: block;
     }
 
@@ -100,8 +100,8 @@
       <h2>Crear tu cuenta:</h2> 
       <input type="email" id="email" placeholder="Email" required> 
       <input type="password" id="password" placeholder="Contraseña" required> 
-      <span class="web">www.turnox.pro/</span>
-      <input type="text" id="username" placeholder="nombre de tu negocio" required> 
+      <span class="web">Tu NOMBRE de usuario será el link de tuTurnero ej: www.turnox/nombre-de-tu-negocio. NO USES ESPACIOS para que sea más facil de recordar</span>
+      <input type="text" id="username" placeholder="nombreDeTuNegocio" required> 
       <button type="submit">Registrarme</button> 
       <div id="msg"></div> 
     </form>
