--- a/register.html
+++ b/register.html
@@ -100,7 +100,8 @@
       <h2>Crear tu cuenta:</h2> 
       <input type="email" id="email" placeholder="Email" required> 
       <input type="password" id="password" placeholder="Contraseña" required> 
-      <span class="web">Tu NOMBRE DE NEGOCIO será el link de tuTurnero ej: www.turnox.pro/DraBruzera o www.turnox.pro/HairStudio.-NO USES ESPACIOS para que sea más fácil de recordar.</span>
+      <span class="web">Tu NOMBRE DE NEGOCIO será el link de tuTurnero ej: www.turnox.pro/DraBruzera o www.turnox.pro/HairStudio.</span>
+      <span class="web">NO USES ESPACIOS para que sea más fácil de recordar.</span>
       <input type="text" id="username" placeholder="nombreDeTuNegocio" required> 
       <button type="submit">Registrarme</button> 
       <div id="msg"></div> 
