--- a/creditos.html
+++ b/creditos.html
@@ -37,7 +37,7 @@
   const params = new URLSearchParams(window.location.search);
   const username = params.get("username");
   const userId = params.get("userId");
-  const API_CREDITOS = "TU_WEB_APP_DE_CREDITOS"; // reemplazar con tu URL de Web App de créditos
+  const API_CREDITOS = "https://script.google.com/macros/s/AKfycbyXMc_LWTl1dbk9Bi38QS_f3OMn61KyYu80sq6uMgw31A3rhsRU8VPixHHWAQ2M34rbYA/exec"; // reemplazar con tu URL de Web App de créditos
 
   if (!username || !userId) {
     alert("Usuario no identificado. Volviendo al login.");
