--- a/creditos.html
+++ b/creditos.html
@@ -34,53 +34,34 @@
 
 <script>
   // ---------- CONFIG ----------
-  const params = new URLSearchParams(window.location.search);
-  const username = params.get("username");
-  const userId = params.get("userId");
-  const API_CREDITOS = "https://script.google.com/macros/s/AKfycbyXMc_LWTl1dbk9Bi38QS_f3OMn61KyYu80sq6uMgw31A3rhsRU8VPixHHWAQ2M34rbYA/exec"; // reemplazar con tu URL de Web App de créditos
-
-  if (!username || !userId) {
-    alert("Usuario no identificado. Volviendo al login.");
-    window.location.href = "/login.html";
-  }
+  let username = "";
+  let userId = "";
 
   // ---------- FUNCIONES ----------
-  async function cargarCreditos() {
-    try {
-      const res = await fetch(`${API_CREDITOS}?action=getCreditos&email=${encodeURIComponent(username)}`);
-      const data = await res.json();
-      if (data.status === "ok") {
-        document.getElementById("creditosActuales").innerText = data.creditos || 0;
-      }
-    } catch(err) {
-      console.error(err);
-    }
+  function init(userData) {
+    username = userData.username;
+    userId = userData.userId;
+    cargarCreditos();
   }
 
-  async function comprarCreditos() {
+  function cargarCreditos() {
+    google.script.run.withSuccessHandler(function(creditos){
+      document.getElementById("creditosActuales").innerText = creditos || 0;
+    }).getCreditos(username);
+  }
+
+  function comprarCreditos() {
     const cantidad = parseInt(document.getElementById("cantidadCreditos").value);
     if (isNaN(cantidad) || cantidad <= 0) { alert("Cantidad inválida"); return; }
 
-    try {
-      const res = await fetch(`${API_CREDITOS}?action=crearPreferencia&email=${encodeURIComponent(username)}&cantidad=${cantidad}`);
-      const data = await res.json();
-      if (data.status === "ok") {
-        document.getElementById("linkPago").innerHTML = `<a href="${data.init_point}" target="_blank">Ir a pagar ${cantidad} créditos</a>`;
-      } else {
-        alert("Error al generar el pago");
-      }
-    } catch(err) {
-      console.error(err);
-      alert("Error al generar el pago");
-    }
+    google.script.run.withSuccessHandler(function(init_point){
+      document.getElementById("linkPago").innerHTML = `<a href="${init_point}" target="_blank">Ir a pagar ${cantidad} créditos</a>`;
+    }).crearPreferencia(username, cantidad);
   }
 
   function volverPanel() {
-    window.location.href = `/panel.html`;
+    google.script.host.close(); // cierra la ventana si se abrió como modal, o redirigir
   }
-
-  // ---------- INIT ----------
-  cargarCreditos();
 </script>
 </body>
 </html>
