--- a/panel.html
+++ b/panel.html
@@ -36,7 +36,7 @@
   .hora-checkbox { display:inline-block; margin:2px; }
 </style>
 <script>
-const API_URL = "https://script.google.com/macros/s/AKfycbxWObLHOJLPbWaeickDqA4-Q3j-jVocswx4CC0r5uTfFADRRR_X16K9ms-RapTVd-uh/exec";
+const API_URL = "https://script.google.com/macros/s/AKfycbyPBAupKqAENRRcTL7ZDtstDvT_m6-XkkMmqxqHAYz6XLZfDeaZByUu94ioFi6jmV98/exec";
 let userId = localStorage.getItem("userId");
 let username = localStorage.getItem("username");
 let profesionales = [];
@@ -169,7 +169,12 @@ async function guardarExcepcion(profId) {
   <p style="padding:10px;">Usuario: <b id="username"></b></p>
   <ul class="menu">
     
-    <li onclick="irACreditos()">Créditos +</li>
+   
+<li>
+  <button onclick="window.open('https://script.google.com/macros/s/AKfycbyPBAupKqAENRRcTL7ZDtstDvT_m6-XkkMmqxqHAYz6XLZfDeaZByUu94ioFi6jmV98/exec?action=abrirCreditos&username='+encodeURIComponent(username)+'&userId='+encodeURIComponent(userId), '_blank')">
+    Créditos +
+  </button>
+</li>
 
 
 
@@ -202,10 +207,7 @@ function toggleSection(id) {
   if (!isVisible) section.style.display = "block";
 }
  
- function irACreditos() {
-  // Abrir la página de créditos en una nueva pestaña
-  window.open('creditos.html?username=' + encodeURIComponent(username) + '&userId=' + encodeURIComponent(userId), '_blank');
-}
+ 
      </script>
 </body>
 </html>
