--- a/panel.html
+++ b/panel.html
@@ -171,10 +171,11 @@ async function guardarExcepcion(profId) {
     
    
 <li>
-  <button onclick="window.open('https://script.google.com/macros/s/AKfycbzA8TcDPmCYLziZgifW2t70uHxLalJSaLtAvvzKYZo2scnxXu3dYDVQXMAOR14w0ApXjA/exec?action=abrirCreditos&username='+encodeURIComponent(username)+'&userId='+encodeURIComponent(userId), '_blank')">
+  <button onclick="window.location.href = 'https://script.google.com/macros/s/AKfycbzA8TcDPmCYLziZgifW2t70uHxLalJSaLtAvvzKYZo2scnxXu3dYDVQXMAOR14w0ApXjA/exec?username='+encodeURIComponent(username)+'&userId='+encodeURIComponent(userId);">
     Créditos +
   </button>
 </li>
+
 
 
 
